Update hero logo in index.html to new branding image for improved visual identity.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <canvas id="noiseCanvas" class="noise-canvas"></canvas>
             <div class="hero-content">
                 <div class="logo-container">
-                    <img src="URCLogo.png" alt="URC Logo" class="hero-logo">
+                    <img src="NewLogouRC25solo.png" alt="URC Logo" class="hero-logo">
                 </div>
                 <h1 class="slogan">Welcome to the 4th Dimension</h1>
                 <p class="hero-subtitle">Underrated Art Creations</p>
