--- a/index.html
+++ b/index.html
@@ -8,44 +8,61 @@
 </head>
 <body>
     <header>
-        <div class="header-utility">
-            <div class="utility-item">
-                <span>USD $</span>
-                <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <polyline points="6 9 12 15 18 9"></polyline>
-                </svg>
+        <div class="header-main">
+            <div class="header-left">
+                <div class="nav-links">
+                    <div class="nav-item">
+                        <a href="#podcast" class="nav-link">PODCAST</a>
+                    </div>
+                    <div class="nav-item">
+                        <a href="#shop" class="nav-link">SHOP</a>
+                    </div>
+                    <div class="nav-item">
+                        <a href="#about" class="nav-link">ABOUT</a>
+                    </div>
+                    <div class="nav-item">
+                        <a href="#contact" class="nav-link">CONTACT</a>
+                    </div>
+                </div>
             </div>
-            <div class="utility-item">
-                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <circle cx="11" cy="11" r="8"></circle>
-                    <path d="M21 21l-4.35-4.35"></path>
-                </svg>
-                <span>Search</span>
+            <div class="header-center">
+                <a href="#" class="logo-link">
+                    <img src="NewLogouRC25solo.png" alt="URC Logo" class="header-logo">
+                </a>
             </div>
-            <div class="utility-item">
-                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
-                    <circle cx="12" cy="7" r="4"></circle>
-                </svg>
-                <span>Account</span>
-            </div>
-            <div class="utility-item">
-                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <circle cx="9" cy="21" r="1"></circle>
-                    <circle cx="20" cy="21" r="1"></circle>
-                    <path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path>
-                </svg>
-                <span>Cart - <span id="cartCount">0</span></span>
+            <div class="header-right">
+                <div class="header-utility">
+                    <div class="utility-item">
+                        <span>USD $</span>
+                        <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <polyline points="6 9 12 15 18 9"></polyline>
+                        </svg>
+                    </div>
+                    <div class="utility-item">
+                        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <circle cx="11" cy="11" r="8"></circle>
+                            <path d="M21 21l-4.35-4.35"></path>
+                        </svg>
+                        <span>Search</span>
+                    </div>
+                    <div class="utility-item">
+                        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
+                            <circle cx="12" cy="7" r="4"></circle>
+                        </svg>
+                        <span>Account</span>
+                    </div>
+                    <div class="utility-item">
+                        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <circle cx="9" cy="21" r="1"></circle>
+                            <circle cx="20" cy="21" r="1"></circle>
+                            <path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path>
+                        </svg>
+                        <span>Cart - <span id="cartCount">0</span></span>
+                    </div>
+                </div>
             </div>
         </div>
-        <nav>
-            <div class="nav-links">
-                <a href="#podcast">PODCAST</a>
-                <a href="#shop">SHOP</a>
-                <a href="#about">ABOUT</a>
-                <a href="#contact">CONTACT</a>
-            </div>
-        </nav>
     </header>
 
     <main>
@@ -56,7 +73,6 @@
                 <div class="logo-container">
                     <img src="NewLogouRC25solo.png" alt="URC Logo" class="hero-logo">
                 </div>
-                <h1 class="slogan">Welcome to the 4th Dimension</h1>
                 <p class="hero-subtitle">Underrated Art Creations</p>
             </div>
         </section>
