Implement responsive navigation menu in index.html with toggle button and overlay. Update styles in styles.css for menu aesthetics and functionality. Enhance script.js to manage menu interactions, including opening, closing, and keyboard accessibility.

--- a/index.html
+++ b/index.html
@@ -10,20 +10,11 @@
     <header>
         <div class="header-main">
             <div class="header-left">
-                <div class="nav-links">
-                    <div class="nav-item">
-                        <a href="#podcast" class="nav-link">PODCAST</a>
-                    </div>
-                    <div class="nav-item">
-                        <a href="#shop" class="nav-link">SHOP</a>
-                    </div>
-                    <div class="nav-item">
-                        <a href="#about" class="nav-link">ABOUT</a>
-                    </div>
-                    <div class="nav-item">
-                        <a href="#contact" class="nav-link">CONTACT</a>
-                    </div>
-                </div>
+                <button id="menuToggle" class="menu-toggle" aria-label="Toggle menu">
+                    <span class="hamburger-line"></span>
+                    <span class="hamburger-line"></span>
+                    <span class="hamburger-line"></span>
+                </button>
             </div>
             <div class="header-center">
                 <a href="#" class="logo-link">
@@ -64,6 +55,26 @@
             </div>
         </div>
     </header>
+
+    <!-- Navigation Menu Panel -->
+    <div id="navMenu" class="nav-menu">
+        <div class="nav-menu-header">
+            <h2>MENU</h2>
+            <button id="navMenuClose" class="nav-menu-close" aria-label="Close menu">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <line x1="18" y1="6" x2="6" y2="18"></line>
+                    <line x1="6" y1="6" x2="18" y2="18"></line>
+                </svg>
+            </button>
+        </div>
+        <nav class="nav-menu-content">
+            <a href="#podcast" class="nav-menu-link">PODCAST</a>
+            <a href="#shop" class="nav-menu-link">SHOP</a>
+            <a href="#about" class="nav-menu-link">ABOUT</a>
+            <a href="#contact" class="nav-menu-link">CONTACT</a>
+        </nav>
+    </div>
+    <div id="navMenuOverlay" class="nav-menu-overlay"></div>
 
     <main>
         <section class="hero">
