Refactor navigation menu in index.html to update links and improve structure. Add sidebar navigation styles in styles.css for enhanced functionality and aesthetics, including overlay and active state management.

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
     </header>
 
-    <!-- Navigation Menu Panel -->
+    <!-- Sidebar Navigation Menu -->
     <div id="navMenu" class="nav-menu">
         <div class="nav-menu-header">
             <h2>MENU</h2>
@@ -68,10 +68,9 @@
             </button>
         </div>
         <nav class="nav-menu-content">
-            <a href="#podcast" class="nav-menu-link">PODCAST</a>
-            <a href="#shop" class="nav-menu-link">SHOP</a>
-            <a href="#about" class="nav-menu-link">ABOUT</a>
-            <a href="#contact" class="nav-menu-link">CONTACT</a>
+            <a href="#records" class="nav-menu-link">records</a>
+            <a href="#merch" class="nav-menu-link">merch</a>
+            <a href="#podcast" class="nav-menu-link">podcast</a>
         </nav>
     </div>
     <div id="navMenuOverlay" class="nav-menu-overlay"></div>
@@ -88,7 +87,7 @@
             </div>
         </section>
 
-        <section id="shop" class="shop-section">
+        <section id="records" class="shop-section">
             <h2>SHOP</h2>
             <div class="categories">
                 <div class="category-card">
@@ -99,7 +98,7 @@
                     <h3>ZINES</h3>
                     <button class="brutal-btn">VIEW COLLECTION</button>
                 </div>
-                <div class="category-card">
+                <div class="category-card" id="merch">
                     <h3>MERCHANDISE</h3>
                     <button class="brutal-btn">VIEW COLLECTION</button>
                 </div>
