--- a/index.html
+++ b/index.html
@@ -83,10 +83,16 @@
                 <div class="logo-container">
                     <img src="NewLogouRC25solo.png" alt="URC Logo" class="hero-logo">
                 </div>
+                <div class="scroll-indicator">
+                    <svg class="scroll-arrow" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <line x1="12" y1="5" x2="12" y2="19"></line>
+                        <polyline points="19 12 12 19 5 12"></polyline>
+                    </svg>
+                </div>
             </div>
         </section>
 
-        <section id="records" class="shop-section">
+        <section id="records" class="shop-section" style="display: none;">
             <h2>SHOP</h2>
             <div class="categories">
                 <div class="category-card">
