Refactor button elements in index.html to links for better navigation. Update styles in styles.css for improved button appearance and responsiveness. Enhance product card functionality in script.js with cart initialization and add-to-cart feature, improving user experience.

--- a/index.html
+++ b/index.html
@@ -91,15 +91,15 @@
             <div class="categories">
                 <div class="category-card">
                     <h3>RECORDS</h3>
-                    <button class="brutal-btn">VIEW COLLECTION</button>
+                    <a href="records.html" class="brutal-btn">BUY RECORDS</a>
                 </div>
                 <div class="category-card">
                     <h3>ZINES</h3>
-                    <button class="brutal-btn">VIEW COLLECTION</button>
+                    <a href="zines.html" class="brutal-btn">BUY ZINE</a>
                 </div>
                 <div class="category-card" id="merch">
                     <h3>MERCHANDISE</h3>
-                    <button class="brutal-btn">VIEW COLLECTION</button>
+                    <a href="merchandise.html" class="brutal-btn">BUY MERCH</a>
                 </div>
             </div>
         </section>
