Add rewind and forward buttons to music player functionality
- Introduced rewind and forward buttons in index.html for audio control
- Implemented rewindTrack and forwardTrack functions in script.js to handle 10-second skips for both SoundCloud and HTML5 audio players
- Enhanced user experience by providing additional navigation options in the music player

--- a/index.html
+++ b/index.html
@@ -143,6 +143,12 @@
                         <line x1="5" y1="19" x2="5" y2="5"></line>
                     </svg>
                 </button>
+                <button class="player-btn" id="rewindBtn" aria-label="Rewind 10 seconds">
+                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <polygon points="11 19 2 12 11 5 11 19"></polygon>
+                        <polygon points="22 19 13 12 22 5 22 19"></polygon>
+                    </svg>
+                </button>
                 <button class="player-btn play-btn" id="playBtn" aria-label="Play">
                     <svg class="play-icon" width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
                         <polygon points="5 3 19 12 5 21 5 3"></polygon>
@@ -150,6 +156,12 @@
                     <svg class="pause-icon" width="24" height="24" viewBox="0 0 24 24" fill="currentColor" style="display: none;">
                         <rect x="6" y="4" width="4" height="16"></rect>
                         <rect x="14" y="4" width="4" height="16"></rect>
+                    </svg>
+                </button>
+                <button class="player-btn" id="forwardBtn" aria-label="Forward 10 seconds">
+                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <polygon points="13 5 22 12 13 19 13 5"></polygon>
+                        <polygon points="2 5 11 12 2 19 2 5"></polygon>
                     </svg>
                 </button>
                 <button class="player-btn" id="nextBtn" aria-label="Next">
