Refactor time display positioning and update logic in music player
- Moved time display into the progress scrubber for better visibility
- Updated time display logic to use a variable for current time calculation
- Enhanced CSS for time display to improve positioning and visibility on hover

--- a/index.html
+++ b/index.html
@@ -131,10 +131,11 @@
 
     <div class="music-player">
         <div class="progress-bar-container">
-            <div class="time-display" id="timeDisplay">0:00</div>
             <div class="progress-bar" id="progressBar">
                 <div class="progress-fill" id="progressFill"></div>
-                <div class="progress-scrubber" id="progressScrubber"></div>
+                <div class="progress-scrubber" id="progressScrubber">
+                    <div class="time-display" id="timeDisplay">0:00</div>
+                </div>
             </div>
         </div>
         <div class="player-content">
