Hide tempo control section in index.html for improved UI clarity

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                         <input type="range" id="volumeSlider" class="volume-slider" min="0" max="100" value="100" aria-label="Volume">
                     </div>
                 </div>
-                <div class="tempo-control">
+                <div class="tempo-control" style="display: none;">
                     <div class="bpm-display" style="display: none;">
                         <span class="bpm-label">BPM</span>
                         <span class="bpm-value" id="bpmValue">--</span>
